--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.8.2",
     "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.12"
